/*
 * WARNING! All changes made in this file will be lost!
 * Created from 'scheme.tl' by 'mtprotoc'
 *
 *  Copyright (c) 2019-present,  NebulaChat Studio (https://nebula.chat).
 *  All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mtproto;

option java_package = "chat.nebula.chatengine.mtproto";
option java_outer_classname = "MTProto";
option optimize_for = CODE_SIZE;
// option go_package = "github.com/nebula-chat/chatengine/mtproto";

import "schema.tl.crc32.proto";


///////////////////////////////////////////////////////////////////////////////
// ResPQ <--
//  + TL_resPQ
//
message ResPQ_Data {
    bytes nonce = 1;
    bytes server_nonce = 2;
    string pq = 3;
    repeated int64 server_public_key_fingerprints = 4;
}

message ResPQ {
    TLConstructor constructor = 1;
    ResPQ_Data data2 = 2;
}

// resPQ#05162463 nonce:int128 server_nonce:int128 pq:string server_public_key_fingerprints:Vector<long> = ResPQ;
message TL_resPQ {
    ResPQ_Data data2 = 2;
}

///////////////////////////////////////////////////////////////////////////////
// P_Q_inner_data <--
//  + TL_p_q_inner_data
//  + TL_p_q_inner_data_dc
//  + TL_p_q_inner_data_temp
//  + TL_p_q_inner_data_temp_dc
//
message P_Q_inner_data_Data {
    string pq = 1;
    string p = 2;
    string q = 3;
    bytes nonce = 4;
    bytes server_nonce = 5;
    bytes new_nonce = 6;
    int32 dc = 7;
    int32 expires_in = 8;
}

message P_Q_inner_data {
    TLConstructor constructor = 1;
    P_Q_inner_data_Data data2 = 2;
}

// p_q_inner_data#83c95aec pq:string p:string q:string nonce:int128 server_nonce:int128 new_nonce:int256 = P_Q_inner_data;
message TL_p_q_inner_data {
    P_Q_inner_data_Data data2 = 2;
}
// p_q_inner_data_dc#a9f55f95 pq:string p:string q:string nonce:int128 server_nonce:int128 new_nonce:int256 dc:int = P_Q_inner_data;
message TL_p_q_inner_data_dc {
    P_Q_inner_data_Data data2 = 2;
}
// p_q_inner_data_temp#3c6a84d4 pq:string p:string q:string nonce:int128 server_nonce:int128 new_nonce:int256 expires_in:int = P_Q_inner_data;
message TL_p_q_inner_data_temp {
    P_Q_inner_data_Data data2 = 2;
}
// p_q_inner_data_temp_dc#56fddf88 pq:string p:string q:string nonce:int128 server_nonce:int128 new_nonce:int256 dc:int expires_in:int = P_Q_inner_data;
message TL_p_q_inner_data_temp_dc {
    P_Q_inner_data_Data data2 = 2;
}

///////////////////////////////////////////////////////////////////////////////
// Server_DH_Params <--
//  + TL_server_DH_params_fail
//  + TL_server_DH_params_ok
//
message Server_DH_Params_Data {
    bytes nonce = 1;
    bytes server_nonce = 2;
    bytes new_nonce_hash = 3;
    string encrypted_answer = 4;
}

message Server_DH_Params {
    TLConstructor constructor = 1;
    Server_DH_Params_Data data2 = 2;
}

// server_DH_params_fail#79cb045d nonce:int128 server_nonce:int128 new_nonce_hash:int128 = Server_DH_Params;
message TL_server_DH_params_fail {
    Server_DH_Params_Data data2 = 2;
}
// server_DH_params_ok#d0e8075c nonce:int128 server_nonce:int128 encrypted_answer:string = Server_DH_Params;
message TL_server_DH_params_ok {
    Server_DH_Params_Data data2 = 2;
}

///////////////////////////////////////////////////////////////////////////////
// Server_DH_inner_data <--
//  + TL_server_DH_inner_data
//
message Server_DH_inner_data_Data {
    bytes nonce = 1;
    bytes server_nonce = 2;
    int32 g = 3;
    string dh_prime = 4;
    string g_a = 5;
    int32 server_time = 6;
}

message Server_DH_inner_data {
    TLConstructor constructor = 1;
    Server_DH_inner_data_Data data2 = 2;
}

// server_DH_inner_data#b5890dba nonce:int128 server_nonce:int128 g:int dh_prime:string g_a:string server_time:int = Server_DH_inner_data;
message TL_server_DH_inner_data {
    Server_DH_inner_data_Data data2 = 2;
}

///////////////////////////////////////////////////////////////////////////////
// Client_DH_Inner_Data <--
//  + TL_client_DH_inner_data
//
message Client_DH_Inner_Data_Data {
    bytes nonce = 1;
    bytes server_nonce = 2;
    int64 retry_id = 3;
    string g_b = 4;
}

message Client_DH_Inner_Data {
    TLConstructor constructor = 1;
    Client_DH_Inner_Data_Data data2 = 2;
}

// client_DH_inner_data#6643b654 nonce:int128 server_nonce:int128 retry_id:long g_b:string = Client_DH_Inner_Data;
message TL_client_DH_inner_data {
    Client_DH_Inner_Data_Data data2 = 2;
}

///////////////////////////////////////////////////////////////////////////////
// Set_client_DH_params_answer <--
//  + TL_dh_gen_ok
//  + TL_dh_gen_retry
//  + TL_dh_gen_fail
//
message Set_client_DH_params_answer_Data {
    bytes nonce = 1;
    bytes server_nonce = 2;
    bytes new_nonce_hash1 = 3;
    bytes new_nonce_hash2 = 4;
    bytes new_nonce_hash3 = 5;
}

message Set_client_DH_params_answer {
    TLConstructor constructor = 1;
    Set_client_DH_params_answer_Data data2 = 2;
}

// dh_gen_ok#3bcbf734 nonce:int128 server_nonce:int128 new_nonce_hash1:int128 = Set_client_DH_params_answer;
message TL_dh_gen_ok {
    Set_client_DH_params_answer_Data data2 = 2;
}
// dh_gen_retry#46dc1fb9 nonce:int128 server_nonce:int128 new_nonce_hash2:int128 = Set_client_DH_params_answer;
message TL_dh_gen_retry {
    Set_client_DH_params_answer_Data data2 = 2;
}
// dh_gen_fail#a69dae02 nonce:int128 server_nonce:int128 new_nonce_hash3:int128 = Set_client_DH_params_answer;
message TL_dh_gen_fail {
    Set_client_DH_params_answer_Data data2 = 2;
}

///////////////////////////////////////////////////////////////////////////////
// DestroyAuthKeyRes <--
//  + TL_destroy_auth_key_ok
//  + TL_destroy_auth_key_none
//  + TL_destroy_auth_key_fail
//
message DestroyAuthKeyRes_Data {
}

message DestroyAuthKeyRes {
    TLConstructor constructor = 1;
    DestroyAuthKeyRes_Data data2 = 2;
}

// destroy_auth_key_ok#f660e1d4 = DestroyAuthKeyRes;
message TL_destroy_auth_key_ok {
    DestroyAuthKeyRes_Data data2 = 2;
}
// destroy_auth_key_none#0a9f2259 = DestroyAuthKeyRes;
message TL_destroy_auth_key_none {
    DestroyAuthKeyRes_Data data2 = 2;
}
// destroy_auth_key_fail#ea109b13 = DestroyAuthKeyRes;
message TL_destroy_auth_key_fail {
    DestroyAuthKeyRes_Data data2 = 2;
}

